[gd_scene load_steps=6 format=3 uid="uid://kie8nwsap7lf"]

[ext_resource type="Script" path="res://weapons/Weapon.gd" id="1_d1ami"]
[ext_resource type="PackedScene" uid="uid://bf27umi31fi3g" path="res://weapons/bullet.tscn" id="2_iktg5"]
[ext_resource type="Texture2D" uid="uid://c8t150angcs0b" path="res://assets/kenney_topdowntanksredux/Spritesheet/onlyObjects_default.png" id="3_7w43x"]

[sub_resource type="Animation" id="Animation_a3vrx"]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6da5t"]
_data = {
"muzzle_flash": SubResource("Animation_a3vrx")
}

[node name="Weapon" type="Node2D"]
script = ExtResource("1_d1ami")
bullet = ExtResource("2_iktg5")

[node name="spawn_bullet" type="Marker2D" parent="."]
position = Vector2(33, 9)

[node name="gun_direction" type="Marker2D" parent="."]
position = Vector2(34, 9)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(44, 9)
rotation = -1.5708
scale = Vector2(0.5, 1.2)
texture = ExtResource("3_7w43x")
region_enabled = true
region_rect = Rect2(324, 334, 20, 25)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6da5t")
}
